--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,4 @@
-# PHP CircleCI 2.0 configuration file
-# See: https://circleci.com/docs/2.0/language-php/
-version: 2
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+version: 2.1
 jobs:
   build:
     docker:
@@ -11,24 +6,28 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Satisfy Server Requirements
-          command: |
-            apt-get update \
-            && apt-get install -y libonig-dev \
-            && docker-php-ext-install \
-              mbstring \
-              pdo \
-              pdo_sqlite
-      - run:
-          name: Install Dependencies
-          command: |
-            composer install -o
-      -run:
-        name: Preapre Database
-        command: |
-          touch ./storage/app/testing.sqlite \
-          && php ./artisan migrate --env=testing --database=sqlite_testing
-      - run:
-        name: Run Tests
-        command: |
-          php ./vendor/bin/phpunit
+          name: Hello World
+          command: echo 'Salut !'
+        #    steps:
+        #      - checkout
+        #      - run:
+        #          name: Satisfy Server Requirements
+        #          command: |
+        #            apt-get update \
+        #            && apt-get install -y libonig-dev \
+        #            && docker-php-ext-install \
+        #              mbstring \
+        #              pdo \
+        #              pdo_sqlite
+        #      - run:
+        #          name: Install Dependencies
+        #          command: |
+        #            composer install -o
+        #      -run:
+        #        name: Preapre Database
+        #        command: |
+        #          touch ./storage/app/testing.sqlite && php ./artisan migrate --env=testing --database=sqlite_testing
+        #      - run:
+        #        name: Run Tests
+        #        command: |
+      #          php ./vendor/bin/phpunit
