--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           name: Satisfy Server Requirements
           command: |
             sudo apt-get update
-            sudo apt-get install -y sqlite3
+            sudo apt-get install -y sqlite libsqlite3-dev
             sudo docker-php-ext-install \
               mbstring \
               pdo \
