--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,7 @@ jobs:
           command: composer install && composer dump-autoload --optimize
       -run:
           name: Prepare Database
-          command: |
-            touch database/database.sqlite
-            php artisan migrate --env=testing --database=sqlite
+          command: touch database/database.sqlite && php artisan migrate --env=testing --database=sqlite
         #      -run:
         #        name: Preapre Database
         #        command: |
