--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Lumen
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -9,6 +9,7 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
