--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,6 @@ jobs:
       - run:
           name: Prepare Database
           command: touch database/database.sqlite && php artisan migrate --env=testing --database=sqlite --force
-        #      - run:
-        #        name: Run Tests
-        #        command: |
-      #          php ./vendor/bin/phpunit
+      - run:
+          name: Run Tests
+          command: php vendor/bin/phpunit
